--- a/Tapit/Base.lproj/Main.storyboard
+++ b/Tapit/Base.lproj/Main.storyboard
@@ -16,7 +16,21 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="GameView">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xna-FQ-Vuk">
+                                <rect key="frame" x="213" y="20" width="174" height="30"/>
+                                <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="29"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xna-FQ-Vuk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KfA-Cd-NfJ"/>
+                        </constraints>
+                        <connections>
+                            <outlet property="scoreLabel" destination="xna-FQ-Vuk" id="8Ex-VQ-icH"/>
+                        </connections>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                 </viewController>
