--- a/Tapit/Base.lproj/Main.storyboard
+++ b/Tapit/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xna-FQ-Vuk">
-                                <rect key="frame" x="265.5" y="10" width="69" height="37"/>
+                                <rect key="frame" x="265.5" y="0.0" width="69" height="37"/>
                                 <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="29"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -27,7 +27,7 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="xna-FQ-Vuk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KfA-Cd-NfJ"/>
-                            <constraint firstItem="xna-FQ-Vuk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="loi-up-PPi"/>
+                            <constraint firstItem="xna-FQ-Vuk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="loi-up-PPi"/>
                         </constraints>
                         <connections>
                             <outlet property="scoreLabel" destination="xna-FQ-Vuk" id="8Ex-VQ-icH"/>
