--- a/Tapit/Base.lproj/Main.storyboard
+++ b/Tapit/Base.lproj/Main.storyboard
@@ -17,16 +17,97 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yQD-W4-Adb">
-                                <rect key="frame" x="285" y="39" width="30" height="30"/>
-                                <state key="normal" title="Play"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yQD-W4-Adb">
+                                <rect key="frame" x="269" y="550" width="62" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="8n1-Kn-Wou"/>
+                                    <constraint firstAttribute="height" constant="30" id="h6a-cF-rqh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="25"/>
+                                <state key="normal" title="Jouer">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="dqS-Dc-r1U"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap It!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAh-0y-TDV">
+                                <rect key="frame" x="257" y="40" width="85.5" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="4wO-1L-h4a"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="NnU-OX-jae"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="30"/>
+                                <color key="textColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="plv-uQ-pUu">
+                                <rect key="frame" x="150" y="157" width="300" height="320"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="6k2-zD-EdL"/>
+                                </constraints>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="csD-9b-zZQ" id="DMK-Tf-MeX"/>
+                                    <outlet property="delegate" destination="csD-9b-zZQ" id="lOU-an-ZWD"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meilleurs scores : " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wgz-w0-Q7M">
+                                <rect key="frame" x="218" y="115" width="163" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="TIt-zs-iMo"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="bP9-h2-4jt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="20"/>
+                                <color key="textColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Votre meilleur score : " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Bd-aW-dm1">
+                                <rect key="frame" x="201" y="485" width="198.5" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="R0n-T3-Nh6"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="Yod-uM-3wh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="20"/>
+                                <color key="textColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="SbM-yI-g3z">
+                                <rect key="frame" x="281" y="281" width="37" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="37" id="0Ur-FL-WaB"/>
+                                    <constraint firstAttribute="height" constant="37" id="Bv1-xM-A2K"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SbM-yI-g3z" firstAttribute="centerY" secondItem="46d-N5-USU" secondAttribute="centerY" id="02Z-dJ-Wgq"/>
+                            <constraint firstItem="yQD-W4-Adb" firstAttribute="top" secondItem="3Bd-aW-dm1" secondAttribute="bottom" constant="25" id="5tg-Hr-i4p"/>
+                            <constraint firstItem="Wgz-w0-Q7M" firstAttribute="centerX" secondItem="46d-N5-USU" secondAttribute="centerX" id="9Us-k8-YXv"/>
+                            <constraint firstItem="3Bd-aW-dm1" firstAttribute="top" secondItem="plv-uQ-pUu" secondAttribute="bottom" constant="8" id="ANa-Iz-xzu"/>
+                            <constraint firstItem="3Bd-aW-dm1" firstAttribute="top" secondItem="plv-uQ-pUu" secondAttribute="bottom" constant="8" id="B3G-2v-LqV"/>
+                            <constraint firstItem="SbM-yI-g3z" firstAttribute="centerX" secondItem="46d-N5-USU" secondAttribute="centerX" id="BuT-YJ-uTT"/>
+                            <constraint firstItem="Wgz-w0-Q7M" firstAttribute="top" secondItem="oAh-0y-TDV" secondAttribute="bottom" constant="35" id="EdZ-h8-OBl"/>
+                            <constraint firstItem="plv-uQ-pUu" firstAttribute="top" secondItem="Wgz-w0-Q7M" secondAttribute="bottom" constant="2" id="K1P-rp-57x"/>
+                            <constraint firstItem="F9L-6J-Fk3" firstAttribute="top" secondItem="yQD-W4-Adb" secondAttribute="bottom" constant="20" id="Wbj-cs-nkQ"/>
+                            <constraint firstItem="Wgz-w0-Q7M" firstAttribute="top" secondItem="oAh-0y-TDV" secondAttribute="bottom" constant="35" id="XE5-UO-5MQ"/>
+                            <constraint firstItem="3Bd-aW-dm1" firstAttribute="centerX" secondItem="46d-N5-USU" secondAttribute="centerX" id="bGd-5I-m14"/>
+                            <constraint firstItem="yQD-W4-Adb" firstAttribute="top" secondItem="3Bd-aW-dm1" secondAttribute="bottom" constant="25" id="dWV-Cl-rK7"/>
+                            <constraint firstItem="yQD-W4-Adb" firstAttribute="centerX" secondItem="46d-N5-USU" secondAttribute="centerX" id="fda-Hq-vKs"/>
+                            <constraint firstItem="oAh-0y-TDV" firstAttribute="top" secondItem="YLh-KN-XxW" secondAttribute="bottom" constant="20" id="hjy-m2-Rd4"/>
+                            <constraint firstItem="plv-uQ-pUu" firstAttribute="top" secondItem="Wgz-w0-Q7M" secondAttribute="bottom" constant="2" id="nbh-Ur-1GS"/>
+                            <constraint firstItem="oAh-0y-TDV" firstAttribute="centerX" secondItem="46d-N5-USU" secondAttribute="centerX" id="wbz-xz-pb2"/>
+                            <constraint firstItem="plv-uQ-pUu" firstAttribute="centerX" secondItem="46d-N5-USU" secondAttribute="centerX" id="xel-Wa-yLD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bestPlayersActivityIndicatorView" destination="SbM-yI-g3z" id="L1t-NZ-D6O"/>
+                        <outlet property="bestPlayersTableView" destination="plv-uQ-pUu" id="SBb-Kr-jgQ"/>
+                        <outlet property="bestScoreLabel" destination="3Bd-aW-dm1" id="auB-61-0YJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="86F-Kj-neh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
